--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hover-effect": "^1.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.49.7",
+    "swiper": "^8.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
